add full function

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np \n",
     "from som import SOM\n",
-    "from som import kmeans"
+    "from som import kmeans\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.metrics import silhouette_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,180 +40,341 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Alcohol</th>\n",
-       "      <th>Malic_Acid</th>\n",
-       "      <th>Ash</th>\n",
-       "      <th>Ash_Alcanity</th>\n",
-       "      <th>Magnesium</th>\n",
-       "      <th>Total_Phenols</th>\n",
-       "      <th>Flavanoids</th>\n",
-       "      <th>Nonflavanoid_Phenols</th>\n",
-       "      <th>Proanthocyanins</th>\n",
-       "      <th>Color_Intensity</th>\n",
-       "      <th>Hue</th>\n",
-       "      <th>OD280</th>\n",
-       "      <th>Proline</th>\n",
+       "      <th>5.1</th>\n",
+       "      <th>3.5</th>\n",
+       "      <th>1.4</th>\n",
+       "      <th>0.2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>14.23</td>\n",
-       "      <td>1.71</td>\n",
-       "      <td>2.43</td>\n",
-       "      <td>15.6</td>\n",
-       "      <td>127</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>3.06</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>2.29</td>\n",
-       "      <td>5.64</td>\n",
-       "      <td>1.04</td>\n",
-       "      <td>3.92</td>\n",
-       "      <td>1065</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>13.20</td>\n",
-       "      <td>1.78</td>\n",
-       "      <td>2.14</td>\n",
-       "      <td>11.2</td>\n",
-       "      <td>100</td>\n",
-       "      <td>2.65</td>\n",
-       "      <td>2.76</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>1.28</td>\n",
-       "      <td>4.38</td>\n",
-       "      <td>1.05</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>1050</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>13.16</td>\n",
-       "      <td>2.36</td>\n",
-       "      <td>2.67</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>101</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>3.24</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>2.81</td>\n",
-       "      <td>5.68</td>\n",
-       "      <td>1.03</td>\n",
-       "      <td>3.17</td>\n",
-       "      <td>1185</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>14.37</td>\n",
-       "      <td>1.95</td>\n",
-       "      <td>2.50</td>\n",
-       "      <td>16.8</td>\n",
-       "      <td>113</td>\n",
-       "      <td>3.85</td>\n",
-       "      <td>3.49</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>2.18</td>\n",
-       "      <td>7.80</td>\n",
-       "      <td>0.86</td>\n",
-       "      <td>3.45</td>\n",
-       "      <td>1480</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>13.24</td>\n",
-       "      <td>2.59</td>\n",
-       "      <td>2.87</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>118</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>2.69</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>1.82</td>\n",
-       "      <td>4.32</td>\n",
-       "      <td>1.04</td>\n",
-       "      <td>2.93</td>\n",
-       "      <td>735</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Alcohol  Malic_Acid   Ash  Ash_Alcanity  Magnesium  Total_Phenols  \\\n",
-       "0    14.23        1.71  2.43          15.6        127           2.80   \n",
-       "1    13.20        1.78  2.14          11.2        100           2.65   \n",
-       "2    13.16        2.36  2.67          18.6        101           2.80   \n",
-       "3    14.37        1.95  2.50          16.8        113           3.85   \n",
-       "4    13.24        2.59  2.87          21.0        118           2.80   \n",
-       "\n",
-       "   Flavanoids  Nonflavanoid_Phenols  Proanthocyanins  Color_Intensity   Hue  \\\n",
-       "0        3.06                  0.28             2.29             5.64  1.04   \n",
-       "1        2.76                  0.26             1.28             4.38  1.05   \n",
-       "2        3.24                  0.30             2.81             5.68  1.03   \n",
-       "3        3.49                  0.24             2.18             7.80  0.86   \n",
-       "4        2.69                  0.39             1.82             4.32  1.04   \n",
-       "\n",
-       "   OD280  Proline  \n",
-       "0   3.92     1065  \n",
-       "1   3.40     1050  \n",
-       "2   3.17     1185  \n",
-       "3   3.45     1480  \n",
-       "4   2.93      735  "
+       "   5.1  3.5  1.4  0.2\n",
+       "0  4.9  3.0  1.4  0.2\n",
+       "1  4.7  3.2  1.3  0.2\n",
+       "2  4.6  3.1  1.5  0.2\n",
+       "3  5.0  3.6  1.4  0.2\n",
+       "4  5.4  3.9  1.7  0.4"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"wine-clustering.csv\")\n",
+    "df = pd.read_csv(\"iris_data.csv\")\n",
+    "df.drop(\"Iris-setosa\", axis=1, inplace=True)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5274906391695935, 0.5471689284732806, 0.08048347818058874, 0.05132550096618748, -0.010116363621151649]\n",
+      "[0.68477369308249, 0.5507221459356525, 0.14133587920043705, 0.046970327204935575, -0.038516345967163586]\n",
+      "[0.5420433321120492, 0.6752934296290661, 0.03774305391974198, 0.11454248732224956, -0.0808243440346104]\n",
+      "[0.6790972216250504, 0.5290014631871558, 0.16964552515779746, -9.476797287369816e-05, 0.13976910224582936]\n",
+      "[0.6790972216250504, 0.5269154597602443, 0.09935796596676769, 0.04332393956596877, -0.012954721343019148]\n",
+      "[0.6838250203278416, 0.4915666323448806, 0.1348541016998093, 0.018299614062618555, 0.15025040383382246]\n",
+      "[0.668890105106973, 0.48536747398977015, 0.17522089328197024, 0.002430497354840765, 0.11415136215877901]\n",
+      "[0.6688901051069731, 0.5486359979373786, -0.00821197616959663, 0.021632543885924123, 0.10246376271184247]\n",
+      "[0.6790972216250504, 0.5387889667711555, 0.1360244604439498, 0.0018855083042098925, 0.020762936403373657]\n",
+      "[0.6403275355623514, 0.491227109626832, 0.12008739967245777, 0.15607806449601302, -0.023888818419685334]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[1.423e+01, 1.710e+00, 2.430e+00, ..., 1.040e+00, 3.920e+00,\n",
-       "        1.065e+03],\n",
-       "       [1.320e+01, 1.780e+00, 2.140e+00, ..., 1.050e+00, 3.400e+00,\n",
-       "        1.050e+03],\n",
-       "       [1.316e+01, 2.360e+00, 2.670e+00, ..., 1.030e+00, 3.170e+00,\n",
-       "        1.185e+03],\n",
-       "       ...,\n",
-       "       [1.327e+01, 4.280e+00, 2.260e+00, ..., 5.900e-01, 1.560e+00,\n",
-       "        8.350e+02],\n",
-       "       [1.317e+01, 2.590e+00, 2.370e+00, ..., 6.000e-01, 1.620e+00,\n",
-       "        8.400e+02],\n",
-       "       [1.413e+01, 4.100e+00, 2.740e+00, ..., 6.100e-01, 1.600e+00,\n",
-       "        5.600e+02]])"
+       "[[0.5274906391695935,\n",
+       "  0.5471689284732806,\n",
+       "  0.08048347818058874,\n",
+       "  0.05132550096618748,\n",
+       "  -0.010116363621151649],\n",
+       " [0.68477369308249,\n",
+       "  0.5507221459356525,\n",
+       "  0.14133587920043705,\n",
+       "  0.046970327204935575,\n",
+       "  -0.038516345967163586],\n",
+       " [0.5420433321120492,\n",
+       "  0.6752934296290661,\n",
+       "  0.03774305391974198,\n",
+       "  0.11454248732224956,\n",
+       "  -0.0808243440346104],\n",
+       " [0.6790972216250504,\n",
+       "  0.5290014631871558,\n",
+       "  0.16964552515779746,\n",
+       "  -9.476797287369816e-05,\n",
+       "  0.13976910224582936],\n",
+       " [0.6790972216250504,\n",
+       "  0.5269154597602443,\n",
+       "  0.09935796596676769,\n",
+       "  0.04332393956596877,\n",
+       "  -0.012954721343019148],\n",
+       " [0.6838250203278416,\n",
+       "  0.4915666323448806,\n",
+       "  0.1348541016998093,\n",
+       "  0.018299614062618555,\n",
+       "  0.15025040383382246],\n",
+       " [0.668890105106973,\n",
+       "  0.48536747398977015,\n",
+       "  0.17522089328197024,\n",
+       "  0.002430497354840765,\n",
+       "  0.11415136215877901],\n",
+       " [0.6688901051069731,\n",
+       "  0.5486359979373786,\n",
+       "  -0.00821197616959663,\n",
+       "  0.021632543885924123,\n",
+       "  0.10246376271184247],\n",
+       " [0.6790972216250504,\n",
+       "  0.5387889667711555,\n",
+       "  0.1360244604439498,\n",
+       "  0.0018855083042098925,\n",
+       "  0.020762936403373657],\n",
+       " [0.6403275355623514,\n",
+       "  0.491227109626832,\n",
+       "  0.12008739967245777,\n",
+       "  0.15607806449601302,\n",
+       "  -0.023888818419685334]]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = df.values\n",
-    "kmeans_model = kmeans(6)\n",
-    "kmeans_model.fit(X)\n",
-    "kmeans"
+    "total_trial = 10\n",
+    "max_iteration = 1000\n",
+    "lr = 1 \n",
+    "nr = 5\n",
+    "epoch = 5\n",
+    "total_cluster = 10\n",
+    "list_df = list()\n",
+    "for i in range(total_trial):\n",
+    "    model1 = kmeans(n_clusters=total_cluster, method=\"random\")\n",
+    "    model1.fit(X, epochs=epoch)\n",
+    "    model2 = kmeans(n_clusters=total_cluster, method=\"kde\")\n",
+    "    model2.fit(X, epochs=epoch)\n",
+    "    model3 = SOM(m = total_cluster, n = total_cluster, dim = X.shape[1], initiate_method = \"random\", max_iter = max_iteration, learning_rate = lr, neighbour_rad = nr)\n",
+    "    model3.fit(X, epoch=epoch)\n",
+    "    model4 = SOM(m = total_cluster, n = total_cluster, dim = X.shape[1], initiate_method = \"kmeans\", max_iter = max_iteration, learning_rate = lr, neighbour_rad = nr)\n",
+    "    model4.fit(X,epoch=epoch)\n",
+    "    model5 = SOM(m = total_cluster, n = total_cluster, dim = X.shape[1], initiate_method = \"kde_kmeans\", max_iter = max_iteration, learning_rate = lr, neighbour_rad = nr)\n",
+    "    model5.fit(X, epoch=epoch)\n",
+    "    ss1 = silhouette_score(X,model1.predict(X))\n",
+    "    ss2 = silhouette_score(X,model2.predict(X))\n",
+    "    ss3 = silhouette_score(X,model3.predict(X))\n",
+    "    ss4 = silhouette_score(X,model4.predict(X))\n",
+    "    ss5 = silhouette_score(X,model5.predict(X))\n",
+    "    print([ss1, ss2, ss3, ss4, ss5])\n",
+    "    list_df.append([ss1, ss2, ss3, ss4, ss5])\n",
+    "list_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>random kmeans</th>\n",
+       "      <th>kde kmeans</th>\n",
+       "      <th>random SOM</th>\n",
+       "      <th>kmeans SOM</th>\n",
+       "      <th>kde kmeans SOM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.527491</td>\n",
+       "      <td>0.547169</td>\n",
+       "      <td>0.080483</td>\n",
+       "      <td>0.051326</td>\n",
+       "      <td>-0.010116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.684774</td>\n",
+       "      <td>0.550722</td>\n",
+       "      <td>0.141336</td>\n",
+       "      <td>0.046970</td>\n",
+       "      <td>-0.038516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.542043</td>\n",
+       "      <td>0.675293</td>\n",
+       "      <td>0.037743</td>\n",
+       "      <td>0.114542</td>\n",
+       "      <td>-0.080824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.679097</td>\n",
+       "      <td>0.529001</td>\n",
+       "      <td>0.169646</td>\n",
+       "      <td>-0.000095</td>\n",
+       "      <td>0.139769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.679097</td>\n",
+       "      <td>0.526915</td>\n",
+       "      <td>0.099358</td>\n",
+       "      <td>0.043324</td>\n",
+       "      <td>-0.012955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.683825</td>\n",
+       "      <td>0.491567</td>\n",
+       "      <td>0.134854</td>\n",
+       "      <td>0.018300</td>\n",
+       "      <td>0.150250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.668890</td>\n",
+       "      <td>0.485367</td>\n",
+       "      <td>0.175221</td>\n",
+       "      <td>0.002430</td>\n",
+       "      <td>0.114151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.668890</td>\n",
+       "      <td>0.548636</td>\n",
+       "      <td>-0.008212</td>\n",
+       "      <td>0.021633</td>\n",
+       "      <td>0.102464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.679097</td>\n",
+       "      <td>0.538789</td>\n",
+       "      <td>0.136024</td>\n",
+       "      <td>0.001886</td>\n",
+       "      <td>0.020763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.640328</td>\n",
+       "      <td>0.491227</td>\n",
+       "      <td>0.120087</td>\n",
+       "      <td>0.156078</td>\n",
+       "      <td>-0.023889</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   random kmeans  kde kmeans  random SOM  kmeans SOM  kde kmeans SOM\n",
+       "0       0.527491    0.547169    0.080483    0.051326       -0.010116\n",
+       "1       0.684774    0.550722    0.141336    0.046970       -0.038516\n",
+       "2       0.542043    0.675293    0.037743    0.114542       -0.080824\n",
+       "3       0.679097    0.529001    0.169646   -0.000095        0.139769\n",
+       "4       0.679097    0.526915    0.099358    0.043324       -0.012955\n",
+       "5       0.683825    0.491567    0.134854    0.018300        0.150250\n",
+       "6       0.668890    0.485367    0.175221    0.002430        0.114151\n",
+       "7       0.668890    0.548636   -0.008212    0.021633        0.102464\n",
+       "8       0.679097    0.538789    0.136024    0.001886        0.020763\n",
+       "9       0.640328    0.491227    0.120087    0.156078       -0.023889"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_save = pd.DataFrame(list_df, columns=[\"random kmeans\", \"kde kmeans\", \"random SOM\", \"kmeans SOM\", \"kde kmeans SOM\"])\n",
+    "df_save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_save.to_csv(\"silhouette_score_data.csv\")"
+   ]
   }
  ],
  "metadata": {
