--- a/main.ipynb
+++ b/main.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np \n",
-    "from som import SOM\n",
-    "from som import kmeans\n",
+    "from SOM_plus_clustering.som import SOM\n",
+    "from SOM_plus_clustering.som import kmeans\n",
     "from sklearn import preprocessing\n",
     "from sklearn.metrics import silhouette_score"
    ]
@@ -117,83 +117,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.5274906391695935, 0.5471689284732806, 0.08048347818058874, 0.05132550096618748, -0.010116363621151649]\n",
-      "[0.68477369308249, 0.5507221459356525, 0.14133587920043705, 0.046970327204935575, -0.038516345967163586]\n",
-      "[0.5420433321120492, 0.6752934296290661, 0.03774305391974198, 0.11454248732224956, -0.0808243440346104]\n",
-      "[0.6790972216250504, 0.5290014631871558, 0.16964552515779746, -9.476797287369816e-05, 0.13976910224582936]\n",
-      "[0.6790972216250504, 0.5269154597602443, 0.09935796596676769, 0.04332393956596877, -0.012954721343019148]\n",
-      "[0.6838250203278416, 0.4915666323448806, 0.1348541016998093, 0.018299614062618555, 0.15025040383382246]\n",
-      "[0.668890105106973, 0.48536747398977015, 0.17522089328197024, 0.002430497354840765, 0.11415136215877901]\n",
-      "[0.6688901051069731, 0.5486359979373786, -0.00821197616959663, 0.021632543885924123, 0.10246376271184247]\n",
-      "[0.6790972216250504, 0.5387889667711555, 0.1360244604439498, 0.0018855083042098925, 0.020762936403373657]\n",
-      "[0.6403275355623514, 0.491227109626832, 0.12008739967245777, 0.15607806449601302, -0.023888818419685334]\n"
+      "[0.6790972216250504, 0.3352990288453319, 0.46314178171050707, 0.02561496125253364, 0.2534650847551749]\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "[[0.5274906391695935,\n",
-       "  0.5471689284732806,\n",
-       "  0.08048347818058874,\n",
-       "  0.05132550096618748,\n",
-       "  -0.010116363621151649],\n",
-       " [0.68477369308249,\n",
-       "  0.5507221459356525,\n",
-       "  0.14133587920043705,\n",
-       "  0.046970327204935575,\n",
-       "  -0.038516345967163586],\n",
-       " [0.5420433321120492,\n",
-       "  0.6752934296290661,\n",
-       "  0.03774305391974198,\n",
-       "  0.11454248732224956,\n",
-       "  -0.0808243440346104],\n",
-       " [0.6790972216250504,\n",
-       "  0.5290014631871558,\n",
-       "  0.16964552515779746,\n",
-       "  -9.476797287369816e-05,\n",
-       "  0.13976910224582936],\n",
-       " [0.6790972216250504,\n",
-       "  0.5269154597602443,\n",
-       "  0.09935796596676769,\n",
-       "  0.04332393956596877,\n",
-       "  -0.012954721343019148],\n",
-       " [0.6838250203278416,\n",
-       "  0.4915666323448806,\n",
-       "  0.1348541016998093,\n",
-       "  0.018299614062618555,\n",
-       "  0.15025040383382246],\n",
-       " [0.668890105106973,\n",
-       "  0.48536747398977015,\n",
-       "  0.17522089328197024,\n",
-       "  0.002430497354840765,\n",
-       "  0.11415136215877901],\n",
-       " [0.6688901051069731,\n",
-       "  0.5486359979373786,\n",
-       "  -0.00821197616959663,\n",
-       "  0.021632543885924123,\n",
-       "  0.10246376271184247],\n",
-       " [0.6790972216250504,\n",
-       "  0.5387889667711555,\n",
-       "  0.1360244604439498,\n",
-       "  0.0018855083042098925,\n",
-       "  0.020762936403373657],\n",
-       " [0.6403275355623514,\n",
-       "  0.491227109626832,\n",
-       "  0.12008739967245777,\n",
-       "  0.15607806449601302,\n",
-       "  -0.023888818419685334]]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m model4\u001b[39m.\u001b[39mfit(X, epoch\u001b[39m=\u001b[39mepoch)\n\u001b[0;32m     17\u001b[0m model5 \u001b[39m=\u001b[39m SOM(m \u001b[39m=\u001b[39m total_cluster, n \u001b[39m=\u001b[39m total_cluster, dim \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m], initiate_method \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mkmeans\u001b[39m\u001b[39m\"\u001b[39m, max_iter \u001b[39m=\u001b[39m max_iteration, learning_rate \u001b[39m=\u001b[39m lr, neighbour_rad \u001b[39m=\u001b[39m nr)\n\u001b[1;32m---> 18\u001b[0m model5\u001b[39m.\u001b[39;49mfit(X,epoch\u001b[39m=\u001b[39;49mepoch)\n\u001b[0;32m     19\u001b[0m model6 \u001b[39m=\u001b[39m SOM(m \u001b[39m=\u001b[39m total_cluster, n \u001b[39m=\u001b[39m total_cluster, dim \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m], initiate_method \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mkde_kmeans\u001b[39m\u001b[39m\"\u001b[39m, max_iter \u001b[39m=\u001b[39m max_iteration, learning_rate \u001b[39m=\u001b[39m lr, neighbour_rad \u001b[39m=\u001b[39m nr)\n\u001b[0;32m     20\u001b[0m model6\u001b[39m.\u001b[39mfit(X, epoch\u001b[39m=\u001b[39mepoch)\n",
+      "File \u001b[1;32mc:\\Users\\Evint\\Documents\\Projects\\SOM_Performance_Analysis\\SOM_plus_clustering\\som.py:325\u001b[0m, in \u001b[0;36mSOM.fit\u001b[1;34m(self, X, epoch, shuffle)\u001b[0m\n\u001b[0;32m    322\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mX.shape[1] should be the same as self.dim, but found \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(X\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]))\n\u001b[0;32m    324\u001b[0m \u001b[39m# initiate new neurons\u001b[39;00m\n\u001b[1;32m--> 325\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mneurons \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49minitiate_neuron(data\u001b[39m=\u001b[39;49mX, min_val\u001b[39m=\u001b[39;49m X\u001b[39m.\u001b[39;49mmin(), max_val\u001b[39m=\u001b[39;49m X\u001b[39m.\u001b[39;49mmax()) \u001b[39m# O(m * n * dim)\u001b[39;00m\n\u001b[0;32m    326\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39minitial_neurons \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mneurons\n\u001b[0;32m    328\u001b[0m \u001b[39m# initiate parameters\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Evint\\Documents\\Projects\\SOM_Performance_Analysis\\SOM_plus_clustering\\som.py:223\u001b[0m, in \u001b[0;36mSOM.initiate_neuron\u001b[1;34m(self, data, min_val, max_val)\u001b[0m\n\u001b[0;32m    221\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmethod \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mkmeans\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m    222\u001b[0m     model \u001b[39m=\u001b[39m kmeans(n_clusters \u001b[39m=\u001b[39m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mm \u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn), method\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mrandom\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 223\u001b[0m     model\u001b[39m.\u001b[39;49mfit(X \u001b[39m=\u001b[39;49m data)\n\u001b[0;32m    224\u001b[0m     neurons \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mcentroids\n\u001b[0;32m    225\u001b[0m     neurons \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msort(neurons, axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Evint\\Documents\\Projects\\SOM_Performance_Analysis\\SOM_plus_clustering\\som.py:153\u001b[0m, in \u001b[0;36mkmeans.fit\u001b[1;34m(self, X, epochs, shuffle)\u001b[0m\n\u001b[0;32m    150\u001b[0m     np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mshuffle(X)\n\u001b[0;32m    152\u001b[0m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m X:\n\u001b[1;32m--> 153\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mupdate_centroids(x)\n",
+      "File \u001b[1;32mc:\\Users\\Evint\\Documents\\Projects\\SOM_Performance_Analysis\\SOM_plus_clustering\\som.py:133\u001b[0m, in \u001b[0;36mkmeans.update_centroids\u001b[1;34m(self, x)\u001b[0m\n\u001b[0;32m    130\u001b[0m centroids_distance \u001b[39m=\u001b[39m [euc_distance(x, i) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcentroids]\n\u001b[0;32m    132\u001b[0m \u001b[39m# find the closest centroid in self.centroids\u001b[39;00m\n\u001b[1;32m--> 133\u001b[0m closest_centroids_index \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49margmin(centroids_distance)\n\u001b[0;32m    134\u001b[0m closest_centroids \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcentroids[closest_centroids_index]\n\u001b[0;32m    136\u001b[0m \u001b[39m# update the closest centroids to the data\u001b[39;00m\n",
+      "File \u001b[1;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36margmin\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\numpy\\core\\fromnumeric.py:1312\u001b[0m, in \u001b[0;36margmin\u001b[1;34m(a, axis, out, keepdims)\u001b[0m\n\u001b[0;32m   1225\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   1226\u001b[0m \u001b[39mReturns the indices of the minimum values along an axis.\u001b[39;00m\n\u001b[0;32m   1227\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1309\u001b[0m \u001b[39m(2, 1, 4)\u001b[39;00m\n\u001b[0;32m   1310\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   1311\u001b[0m kwds \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mkeepdims\u001b[39m\u001b[39m'\u001b[39m: keepdims} \u001b[39mif\u001b[39;00m keepdims \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39m_NoValue \u001b[39melse\u001b[39;00m {}\n\u001b[1;32m-> 1312\u001b[0m \u001b[39mreturn\u001b[39;00m _wrapfunc(a, \u001b[39m'\u001b[39m\u001b[39margmin\u001b[39m\u001b[39m'\u001b[39m, axis\u001b[39m=\u001b[39maxis, out\u001b[39m=\u001b[39mout, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\numpy\\core\\fromnumeric.py:54\u001b[0m, in \u001b[0;36m_wrapfunc\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     52\u001b[0m bound \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, method, \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m     53\u001b[0m \u001b[39mif\u001b[39;00m bound \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m---> 54\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapit(obj, method, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m     56\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     57\u001b[0m     \u001b[39mreturn\u001b[39;00m bound(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\numpy\\core\\fromnumeric.py:43\u001b[0m, in \u001b[0;36m_wrapit\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n\u001b[0;32m     42\u001b[0m     wrap \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m---> 43\u001b[0m result \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(asarray(obj), method)(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m     44\u001b[0m \u001b[39mif\u001b[39;00m wrap:\n\u001b[0;32m     45\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(result, mu\u001b[39m.\u001b[39mndarray):\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -202,24 +153,27 @@
     "lr = 1 \n",
     "nr = 5\n",
     "epoch = 5\n",
-    "total_cluster = 10\n",
+    "total_cluster = 5\n",
     "list_df = list()\n",
     "for i in range(total_trial):\n",
     "    model1 = kmeans(n_clusters=total_cluster, method=\"random\")\n",
     "    model1.fit(X, epochs=epoch)\n",
     "    model2 = kmeans(n_clusters=total_cluster, method=\"kde\")\n",
     "    model2.fit(X, epochs=epoch)\n",
-    "    model3 = SOM(m = total_cluster, n = total_cluster, dim = X.shape[1], initiate_method = \"random\", max_iter = max_iteration, learning_rate = lr, neighbour_rad = nr)\n",
-    "    model3.fit(X, epoch=epoch)\n",
-    "    model4 = SOM(m = total_cluster, n = total_cluster, dim = X.shape[1], initiate_method = \"kmeans\", max_iter = max_iteration, learning_rate = lr, neighbour_rad = nr)\n",
-    "    model4.fit(X,epoch=epoch)\n",
-    "    model5 = SOM(m = total_cluster, n = total_cluster, dim = X.shape[1], initiate_method = \"kde_kmeans\", max_iter = max_iteration, learning_rate = lr, neighbour_rad = nr)\n",
-    "    model5.fit(X, epoch=epoch)\n",
+    "    model3 = kmeans(n_clusters=total_cluster, method=\"kmeans++\")\n",
+    "    model3.fit(X, epochs=epoch)\n",
+    "    model4 = SOM(m = total_cluster, n = total_cluster, dim = X.shape[1], initiate_method = \"random\", max_iter = max_iteration, learning_rate = lr, neighbour_rad = nr)\n",
+    "    model4.fit(X, epoch=epoch)\n",
+    "    model5 = SOM(m = total_cluster, n = total_cluster, dim = X.shape[1], initiate_method = \"kmeans\", max_iter = max_iteration, learning_rate = lr, neighbour_rad = nr)\n",
+    "    model5.fit(X,epoch=epoch)\n",
+    "    model6 = SOM(m = total_cluster, n = total_cluster, dim = X.shape[1], initiate_method = \"kde_kmeans\", max_iter = max_iteration, learning_rate = lr, neighbour_rad = nr)\n",
+    "    model6.fit(X, epoch=epoch)\n",
     "    ss1 = silhouette_score(X,model1.predict(X))\n",
     "    ss2 = silhouette_score(X,model2.predict(X))\n",
     "    ss3 = silhouette_score(X,model3.predict(X))\n",
     "    ss4 = silhouette_score(X,model4.predict(X))\n",
     "    ss5 = silhouette_score(X,model5.predict(X))\n",
+    "    ss6 = silhouette_score(X,model6.predict(X))\n",
     "    print([ss1, ss2, ss3, ss4, ss5])\n",
     "    list_df.append([ss1, ss2, ss3, ss4, ss5])\n",
     "list_df"
