--- a/result_analysis.ipynb
+++ b/result_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -50,63 +50,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.683825</td>\n",
-       "      <td>0.661844</td>\n",
-       "      <td>0.547249</td>\n",
-       "      <td>0.113681</td>\n",
-       "      <td>0.477293</td>\n",
-       "      <td>0.473689</td>\n",
-       "      <td>0.535864</td>\n",
-       "      <td>0.514727</td>\n",
-       "      <td>0.210254</td>\n",
+       "      <td>0.684774</td>\n",
+       "      <td>0.684774</td>\n",
+       "      <td>0.463065</td>\n",
+       "      <td>0.402193</td>\n",
+       "      <td>0.205022</td>\n",
+       "      <td>0.455939</td>\n",
+       "      <td>0.413563</td>\n",
+       "      <td>0.441646</td>\n",
+       "      <td>0.224409</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.679097</td>\n",
-       "      <td>0.679097</td>\n",
-       "      <td>0.547932</td>\n",
+       "      <td>0.675293</td>\n",
        "      <td>0.684774</td>\n",
-       "      <td>0.555201</td>\n",
-       "      <td>0.248771</td>\n",
-       "      <td>0.526601</td>\n",
-       "      <td>0.534656</td>\n",
-       "      <td>-0.012939</td>\n",
+       "      <td>0.457717</td>\n",
+       "      <td>0.154600</td>\n",
+       "      <td>0.545933</td>\n",
+       "      <td>0.588291</td>\n",
+       "      <td>0.398590</td>\n",
+       "      <td>0.455338</td>\n",
+       "      <td>-0.219745</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.675293</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.535476</td>\n",
-       "      <td>0.423585</td>\n",
-       "      <td>0.464505</td>\n",
-       "      <td>0.181662</td>\n",
-       "      <td>0.540706</td>\n",
-       "      <td>0.488235</td>\n",
-       "      <td>0.041007</td>\n",
+       "      <td>0.684774</td>\n",
+       "      <td>0.548528</td>\n",
+       "      <td>0.493736</td>\n",
+       "      <td>0.211824</td>\n",
+       "      <td>0.384290</td>\n",
+       "      <td>0.416028</td>\n",
+       "      <td>0.404463</td>\n",
+       "      <td>0.347690</td>\n",
+       "      <td>-0.003175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.681306</td>\n",
-       "      <td>0.550427</td>\n",
-       "      <td>0.174482</td>\n",
-       "      <td>0.270850</td>\n",
-       "      <td>0.226645</td>\n",
-       "      <td>0.504371</td>\n",
-       "      <td>0.505449</td>\n",
-       "      <td>0.503187</td>\n",
+       "      <td>0.516907</td>\n",
+       "      <td>0.514451</td>\n",
+       "      <td>0.488331</td>\n",
+       "      <td>0.281559</td>\n",
+       "      <td>0.347082</td>\n",
+       "      <td>0.542082</td>\n",
+       "      <td>0.374242</td>\n",
+       "      <td>0.234802</td>\n",
+       "      <td>0.448585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.683825</td>\n",
-       "      <td>0.538548</td>\n",
-       "      <td>0.410826</td>\n",
        "      <td>0.684774</td>\n",
-       "      <td>0.250834</td>\n",
-       "      <td>0.509962</td>\n",
-       "      <td>0.528410</td>\n",
-       "      <td>0.639503</td>\n",
+       "      <td>0.549082</td>\n",
+       "      <td>0.474679</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.428644</td>\n",
+       "      <td>0.430766</td>\n",
+       "      <td>0.341026</td>\n",
+       "      <td>0.410366</td>\n",
+       "      <td>0.664060</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -114,33 +114,33 @@
       ],
       "text/plain": [
        "   random kmeans  kde kmeans  kmeans++  random SOM  kmeans SOM  \\\n",
-       "0       0.683825    0.661844  0.547249    0.113681    0.477293   \n",
-       "1       0.679097    0.679097  0.547932    0.684774    0.555201   \n",
-       "2       0.675293         NaN  0.535476    0.423585    0.464505   \n",
-       "3            NaN    0.681306  0.550427    0.174482    0.270850   \n",
-       "4            NaN    0.683825  0.538548    0.410826    0.684774   \n",
+       "0       0.684774    0.684774  0.463065    0.402193    0.205022   \n",
+       "1       0.675293    0.684774  0.457717    0.154600    0.545933   \n",
+       "2       0.684774    0.548528  0.493736    0.211824    0.384290   \n",
+       "3       0.516907    0.514451  0.488331    0.281559    0.347082   \n",
+       "4       0.684774    0.549082  0.474679         NaN    0.428644   \n",
        "\n",
        "   kde kmeans SOM  kmeans++ SOM     SOM++   kde SOM  \n",
-       "0        0.473689      0.535864  0.514727  0.210254  \n",
-       "1        0.248771      0.526601  0.534656 -0.012939  \n",
-       "2        0.181662      0.540706  0.488235  0.041007  \n",
-       "3        0.226645      0.504371  0.505449  0.503187  \n",
-       "4        0.250834      0.509962  0.528410  0.639503  "
+       "0        0.455939      0.413563  0.441646  0.224409  \n",
+       "1        0.588291      0.398590  0.455338 -0.219745  \n",
+       "2        0.416028      0.404463  0.347690 -0.003175  \n",
+       "3        0.542082      0.374242  0.234802  0.448585  \n",
+       "4        0.430766      0.341026  0.410366  0.664060  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"silhouette_score_data.csv\")\n",
+    "df = pd.read_csv(\"Datas/silhouette_score_data.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -148,21 +148,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 30 entries, 0 to 29\n",
+      "RangeIndex: 50 entries, 0 to 49\n",
       "Data columns (total 9 columns):\n",
       " #   Column          Non-Null Count  Dtype  \n",
       "---  ------          --------------  -----  \n",
-      " 0   random kmeans   24 non-null     float64\n",
-      " 1   kde kmeans      26 non-null     float64\n",
-      " 2   kmeans++        30 non-null     float64\n",
-      " 3   random SOM      29 non-null     float64\n",
-      " 4   kmeans SOM      30 non-null     float64\n",
-      " 5   kde kmeans SOM  30 non-null     float64\n",
-      " 6   kmeans++ SOM    30 non-null     float64\n",
-      " 7   SOM++           30 non-null     float64\n",
-      " 8   kde SOM         27 non-null     float64\n",
+      " 0   random kmeans   43 non-null     float64\n",
+      " 1   kde kmeans      49 non-null     float64\n",
+      " 2   kmeans++        50 non-null     float64\n",
+      " 3   random SOM      44 non-null     float64\n",
+      " 4   kmeans SOM      50 non-null     float64\n",
+      " 5   kde kmeans SOM  50 non-null     float64\n",
+      " 6   kmeans++ SOM    50 non-null     float64\n",
+      " 7   SOM++           50 non-null     float64\n",
+      " 8   kde SOM         49 non-null     float64\n",
       "dtypes: float64(9)\n",
-      "memory usage: 2.2 KB\n"
+      "memory usage: 3.6 KB\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -210,98 +210,98 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>26.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>29.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>27.000000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>49.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>49.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.669670</td>\n",
-       "      <td>0.668961</td>\n",
-       "      <td>0.537803</td>\n",
-       "      <td>0.328051</td>\n",
-       "      <td>0.475913</td>\n",
-       "      <td>0.368820</td>\n",
-       "      <td>0.489981</td>\n",
-       "      <td>0.507224</td>\n",
-       "      <td>0.402713</td>\n",
+       "      <td>0.643237</td>\n",
+       "      <td>0.626261</td>\n",
+       "      <td>0.482232</td>\n",
+       "      <td>0.319095</td>\n",
+       "      <td>0.369411</td>\n",
+       "      <td>0.367928</td>\n",
+       "      <td>0.391831</td>\n",
+       "      <td>0.399061</td>\n",
+       "      <td>0.325376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.037005</td>\n",
-       "      <td>0.028431</td>\n",
-       "      <td>0.013593</td>\n",
-       "      <td>0.240172</td>\n",
-       "      <td>0.166665</td>\n",
-       "      <td>0.135641</td>\n",
-       "      <td>0.041604</td>\n",
-       "      <td>0.031570</td>\n",
-       "      <td>0.270427</td>\n",
+       "      <td>0.068817</td>\n",
+       "      <td>0.068227</td>\n",
+       "      <td>0.017992</td>\n",
+       "      <td>0.202811</td>\n",
+       "      <td>0.158355</td>\n",
+       "      <td>0.178029</td>\n",
+       "      <td>0.042012</td>\n",
+       "      <td>0.058481</td>\n",
+       "      <td>0.196199</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.507493</td>\n",
-       "      <td>0.546878</td>\n",
-       "      <td>0.510902</td>\n",
-       "      <td>-0.237342</td>\n",
-       "      <td>0.013838</td>\n",
-       "      <td>0.181662</td>\n",
-       "      <td>0.357415</td>\n",
-       "      <td>0.450074</td>\n",
-       "      <td>-0.126832</td>\n",
+       "      <td>0.407620</td>\n",
+       "      <td>0.514451</td>\n",
+       "      <td>0.378856</td>\n",
+       "      <td>-0.274155</td>\n",
+       "      <td>-0.246741</td>\n",
+       "      <td>-0.254390</td>\n",
+       "      <td>0.248112</td>\n",
+       "      <td>0.234802</td>\n",
+       "      <td>-0.219745</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.675293</td>\n",
-       "      <td>0.670491</td>\n",
-       "      <td>0.527774</td>\n",
-       "      <td>0.173770</td>\n",
-       "      <td>0.360659</td>\n",
-       "      <td>0.253106</td>\n",
-       "      <td>0.478671</td>\n",
-       "      <td>0.485032</td>\n",
-       "      <td>0.225675</td>\n",
+       "      <td>0.658375</td>\n",
+       "      <td>0.549082</td>\n",
+       "      <td>0.478405</td>\n",
+       "      <td>0.215283</td>\n",
+       "      <td>0.307347</td>\n",
+       "      <td>0.276519</td>\n",
+       "      <td>0.375808</td>\n",
+       "      <td>0.362960</td>\n",
+       "      <td>0.229901</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.683825</td>\n",
-       "      <td>0.679097</td>\n",
-       "      <td>0.544863</td>\n",
-       "      <td>0.338410</td>\n",
-       "      <td>0.494048</td>\n",
-       "      <td>0.331239</td>\n",
-       "      <td>0.500058</td>\n",
-       "      <td>0.512396</td>\n",
-       "      <td>0.493223</td>\n",
+       "      <td>0.675293</td>\n",
+       "      <td>0.675293</td>\n",
+       "      <td>0.486972</td>\n",
+       "      <td>0.284617</td>\n",
+       "      <td>0.377145</td>\n",
+       "      <td>0.409732</td>\n",
+       "      <td>0.400151</td>\n",
+       "      <td>0.409669</td>\n",
+       "      <td>0.336640</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.684062</td>\n",
-       "      <td>0.683195</td>\n",
-       "      <td>0.549339</td>\n",
-       "      <td>0.504236</td>\n",
-       "      <td>0.625252</td>\n",
-       "      <td>0.469886</td>\n",
-       "      <td>0.515195</td>\n",
-       "      <td>0.528466</td>\n",
-       "      <td>0.641766</td>\n",
+       "      <td>0.683825</td>\n",
+       "      <td>0.683825</td>\n",
+       "      <td>0.491564</td>\n",
+       "      <td>0.454084</td>\n",
+       "      <td>0.496476</td>\n",
+       "      <td>0.471233</td>\n",
+       "      <td>0.423127</td>\n",
+       "      <td>0.435719</td>\n",
+       "      <td>0.461883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>0.684774</td>\n",
        "      <td>0.684774</td>\n",
-       "      <td>0.552696</td>\n",
+       "      <td>0.498721</td>\n",
        "      <td>0.684774</td>\n",
-       "      <td>0.684774</td>\n",
-       "      <td>0.684774</td>\n",
-       "      <td>0.540706</td>\n",
-       "      <td>0.551746</td>\n",
+       "      <td>0.608383</td>\n",
+       "      <td>0.675293</td>\n",
+       "      <td>0.440806</td>\n",
+       "      <td>0.507760</td>\n",
        "      <td>0.684774</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -310,27 +310,27 @@
       ],
       "text/plain": [
        "       random kmeans  kde kmeans   kmeans++  random SOM  kmeans SOM  \\\n",
-       "count      24.000000   26.000000  30.000000   29.000000   30.000000   \n",
-       "mean        0.669670    0.668961   0.537803    0.328051    0.475913   \n",
-       "std         0.037005    0.028431   0.013593    0.240172    0.166665   \n",
-       "min         0.507493    0.546878   0.510902   -0.237342    0.013838   \n",
-       "25%         0.675293    0.670491   0.527774    0.173770    0.360659   \n",
-       "50%         0.683825    0.679097   0.544863    0.338410    0.494048   \n",
-       "75%         0.684062    0.683195   0.549339    0.504236    0.625252   \n",
-       "max         0.684774    0.684774   0.552696    0.684774    0.684774   \n",
+       "count      43.000000   49.000000  50.000000   44.000000   50.000000   \n",
+       "mean        0.643237    0.626261   0.482232    0.319095    0.369411   \n",
+       "std         0.068817    0.068227   0.017992    0.202811    0.158355   \n",
+       "min         0.407620    0.514451   0.378856   -0.274155   -0.246741   \n",
+       "25%         0.658375    0.549082   0.478405    0.215283    0.307347   \n",
+       "50%         0.675293    0.675293   0.486972    0.284617    0.377145   \n",
+       "75%         0.683825    0.683825   0.491564    0.454084    0.496476   \n",
+       "max         0.684774    0.684774   0.498721    0.684774    0.608383   \n",
        "\n",
        "       kde kmeans SOM  kmeans++ SOM      SOM++    kde SOM  \n",
-       "count       30.000000     30.000000  30.000000  27.000000  \n",
-       "mean         0.368820      0.489981   0.507224   0.402713  \n",
-       "std          0.135641      0.041604   0.031570   0.270427  \n",
-       "min          0.181662      0.357415   0.450074  -0.126832  \n",
-       "25%          0.253106      0.478671   0.485032   0.225675  \n",
-       "50%          0.331239      0.500058   0.512396   0.493223  \n",
-       "75%          0.469886      0.515195   0.528466   0.641766  \n",
-       "max          0.684774      0.540706   0.551746   0.684774  "
+       "count       50.000000     50.000000  50.000000  49.000000  \n",
+       "mean         0.367928      0.391831   0.399061   0.325376  \n",
+       "std          0.178029      0.042012   0.058481   0.196199  \n",
+       "min         -0.254390      0.248112   0.234802  -0.219745  \n",
+       "25%          0.276519      0.375808   0.362960   0.229901  \n",
+       "50%          0.409732      0.400151   0.409669   0.336640  \n",
+       "75%          0.471233      0.423127   0.435719   0.461883  \n",
+       "max          0.675293      0.440806   0.507760   0.684774  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
